--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp-uglify": "^3.0.2",
     "gulp-watch": "^5.0.1",
     "imagemin-jpeg-recompress": "^6.0.0",
+    "jquery-form-styler": "^2.0.2",
     "replace": "^1.2.0",
     "sass": "^1.26.5",
     "ttf2woff": "^2.0.1",
