--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
+    "animate.css": "^4.1.0",
     "browser-sync": "^2.26.7",
     "del": "^5.1.0",
+    "flipclock": "^0.10.8",
     "fontforge": "^0.0.4",
     "global": "^4.4.0",
     "gulp": "^4.0.2",
